// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tab /> snapshot should match snapshot 1`] = `
<Tab>
  <FocusRing>
    <FocusRing
      focusClass="children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <button
        className="md-tab-wrapper"
        data-active={false}
        data-disabled={false}
        data-open={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="button"
      >
        <Text
          type="subheader-secondary"
        >
          <h3
            className="md-text-wrapper md-text-color"
            data-type="subheader-secondary"
          >
            children
          </h3>
        </Text>
      </button>
    </FocusRing>
  </FocusRing>
</Tab>
`;

exports[`<Tab /> snapshot should match snapshot with active 1`] = `
<Tab
  active={false}
>
  <FocusRing>
    <FocusRing
      focusClass="children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <button
        className="md-tab-wrapper"
        data-active={false}
        data-disabled={false}
        data-open={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="button"
      />
    </FocusRing>
  </FocusRing>
</Tab>
`;

exports[`<Tab /> snapshot should match snapshot with className 1`] = `
<Tab
  className="example-class"
>
  <FocusRing>
    <FocusRing
      focusClass="children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <button
        className="md-tab-wrapper example-class"
        data-active={false}
        data-disabled={false}
        data-open={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="button"
      />
    </FocusRing>
  </FocusRing>
</Tab>
`;

exports[`<Tab /> snapshot should match snapshot with disabled 1`] = `
<Tab
  disabled={false}
>
  <FocusRing
    disabled={false}
  >
    <FocusRing
      disabled={false}
      focusClass="children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <button
        className="md-tab-wrapper"
        data-active={false}
        data-disabled={false}
        data-open={false}
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="button"
      />
    </FocusRing>
  </FocusRing>
</Tab>
`;

exports[`<Tab /> snapshot should match snapshot with id 1`] = `
<Tab
  id="example-id"
>
  <FocusRing>
    <FocusRing
      focusClass="children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <button
        className="md-tab-wrapper"
        data-active={false}
        data-disabled={false}
        data-open={false}
        id="example-id"
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="button"
      />
    </FocusRing>
  </FocusRing>
</Tab>
`;

exports[`<Tab /> snapshot should match snapshot with open 1`] = `
<Tab
  open={false}
>
  <FocusRing>
    <FocusRing
      focusClass="children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <button
        className="md-tab-wrapper"
        data-active={false}
        data-disabled={false}
        data-open={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="button"
      />
    </FocusRing>
  </FocusRing>
</Tab>
`;

exports[`<Tab /> snapshot should match snapshot with style 1`] = `
<Tab
  style={
    Object {
      "color": "pink",
    }
  }
>
  <FocusRing>
    <FocusRing
      focusClass="children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <button
        className="md-tab-wrapper"
        data-active={false}
        data-disabled={false}
        data-open={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "color": "pink",
          }
        }
        type="button"
      />
    </FocusRing>
  </FocusRing>
</Tab>
`;
